# multimodal-rag-pipeline

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml  run.sh
.streamlit/: config.toml
conf/: config.yaml  logging.yaml  tuned_config.yaml
conf/api/: api_default.yaml
conf/embeddings/: bge_large.yaml  sentence_transformers.yaml
conf/evaluation/: evaluation_default.yaml  ragas_config.yaml
conf/llm/: huggingface_gpt2.yaml  ollama_llama3.yaml
conf/observability/: langfuse_default.yaml
conf/optuna/: optuna_default.yaml
conf/prompts/: concise_rag.yaml  default_rag.yaml  detailed_rag.yaml
conf/vectordb/: chroma_default.yaml
docker/backend/: Containerfile
docker/embedder/: Containerfile
docker/frontend/: Containerfile
evaluation/: bleu_rouge_answers.json  chatgpt_comparison_answers.json
reports/: sample_questions.json
requirements/: requirements-backend.txt  requirements-dev.txt  requirements-evaluation.txt  requirements-ml.txt  requirements-monitoring.txt  requirements-web.txt  requirements.txt
src/: __init__.py
src/api/: __init__.py  schemas.py
src/embedders/: __init__.py  audio_embedder.py  base_embedder.py  csv_embedder.py  docx_embedder.py  html_embedder.py  html_parser.py  image_embedder.py  main_embedder.py  pdf_embedder.py
src/evaluation/: data_adapters.py  rag_evaluator.py  ragas_evaluator.py
src/interfaces/: __init__.py  base_interfaces.py  fastapi_app.py  streamlit_app.py
src/monitoring/: health_monitor.py
src/observability/: __init__.py  langfuse_integration.py
src/optuna/: __init__.py  optuna_tuner.py  run_tuning.py
src/rag/: __init__.py  generator.py  pipeline.py  retriever.py
src/reports/: __init__.py  report_generator.py
src/tests/: test_config_advanced.py  test_content_safety.py  test_core.py  test_database.py  test_edge_cases.py  test_embedders.py  test_fastapi_app.py  test_generator.py  test_html_parser.py  test_rag_pipeline.py  test_retriever.py
src/utils/: __init__.py  async_helpers.py  content_safety.py  core.py  performance.py  ui_helpers.py  validation.py
